This is the worse yet
Just in case someone (e.g. I) realizes that this wasn't that useless
after all.
The last one was renamed to sortOld